--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "~3.3.5",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-sanitize": "~1.4.2"
   }
 }
