--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "html5-boilerplate": "~5.2.0",
     "bootstrap": "~3.3.5",
     "underscore": "~1.8.3",
-    "angular-sanitize": "~1.4.2"
+    "angular-sanitize": "~1.4.2",
+    "angular-resource": "~1.4.2",
+    "angular-cookies": "~1.4.2"
   }
 }
